assignment 2 and 3 update

--- a/Stats_Assignment_2.ipynb
+++ b/Stats_Assignment_2.ipynb
@@ -15,6 +15,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "Name : Kavya Gopalaiah\n",
+        "\n",
+        "ML & Statistics - Assignment 2\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "b0BhTlMiO7Gd"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -110,13 +122,13 @@
         "# Displaying the first few rows to get familiar with the data\n",
         "print(iris.head())\n",
         "\n",
-        "# Randomly sample 30 observations from the dataset\n",
+        "# Randomly sampling 30 observations from the dataset\n",
         "random_sample = iris.sample(n=30, random_state=42)\n",
         "\n",
-        "# Display the randomly sampled data\n",
+        "# Displaying the randomly sampled data\n",
         "print(random_sample)\n",
         "\n",
-        "# Repeat random sampling 100 times and calculate the mean sepal length\n",
+        "# Repeating random sampling 100 times and calculate the mean sepal length\n",
         "sample_means = []\n",
         "for _ in range(100):\n",
         "    sample = iris.sample(n=30, random_state=np.random.randint(0, 1000))\n",
@@ -124,7 +136,7 @@
         "\n",
         "print(\"/n\")\n",
         "\n",
-        "# Plot the distribution of sample means using a histogram\n",
+        "# Ploting the distribution of sample means using a histogram\n",
         "plt.figure(figsize=(8, 6))\n",
         "plt.hist(sample_means, bins=10, edgecolor='black')\n",
         "plt.axvline(x=iris['sepal_length'].mean(), color='red', linestyle='--', label='Population Mean')\n",
@@ -143,10 +155,10 @@
         "    indices = np.arange(0, population_size, step)\n",
         "    return data.iloc[indices]\n",
         "\n",
-        "# Perform systematic sampling (20% of the dataset)\n",
+        "# Performing systematic sampling (20% of the dataset)\n",
         "systematic_sample = systematic_sampling(iris, 0.2)\n",
         "\n",
-        "# Plot original vs sampled data\n",
+        "# Ploting original vs sampled data\n",
         "fig, axes = plt.subplots(1, 2, figsize=(15, 6))\n",
         "\n",
         "\n",
