--- a/Stats_Assignment_3.ipynb
+++ b/Stats_Assignment_3.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOCyRGBef9reIIBWxtDtJQe",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,13 +16,14 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kavya-gee/Stats-Assignments/blob/main/Stats_Assignment_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+        "Name : Kavya Gopalaiah\n",
+        "\n",
+        "ML & Statistics - Assignment 3"
+      ],
+      "metadata": {
+        "id": "HLSjvKloPAGA"
+      }
     },
     {
       "cell_type": "code",
