--- a/Exercise_Day_8_Tree_and_KNN_classification.ipynb
+++ b/Exercise_Day_8_Tree_and_KNN_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMeW5Gx/NBi4YuSxVBDeiy",
+      "authorship_tag": "ABX9TyMf5cMR39QIKbw+nup9BP6M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -564,7 +564,7 @@
         "# ------------------------------------------------------------------------------------------------------------------------------------------------\n",
         "\n",
         "# Exercise Day 8 : Tree and KNN classification\n",
-        "# Following the outcomes of the previous group exercise, proceeding to complete the individual exercise.\n",
+        "# Following the outcomes of the previous group exercise\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
@@ -573,7 +573,7 @@
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
         "\n",
-        "# Define categorical columns\n",
+        "# Defining categorical columns\n",
         "categorical_cols = ['Primary streaming service', 'While working', 'Instrumentalist',\n",
         "                   'Composer', 'Fav genre', 'Exploratory', 'Foreign languages',\n",
         "                   'Frequency [Classical]', 'Frequency [Country]', 'Frequency [EDM]',\n",
@@ -583,29 +583,13 @@
         "                   'Frequency [R&B]', 'Frequency [Rap]', 'Frequency [Rock]',\n",
         "                   'Frequency [Video game music]', 'Music effects']\n",
         "\n",
-        "# Create EncodedDF with one-hot encoding\n",
+        "# Creating EncodedDF with one-hot encoding\n",
         "EncodedDF = pd.get_dummies(df, columns=categorical_cols)\n",
         "EncodedDF.drop(columns=['Timestamp'], inplace=True)\n",
         "\n",
-        "# Prepare features and target\n",
-        "X = EncodedDF.drop(columns=['Music effects_Improve', 'Music effects_No effect', 'Music effects_Worsen'])\n",
-        "y = EncodedDF['Music effects_Improve']  # Binary classification target\n",
-        "\n",
         "# Preparing features and target\n",
         "X = EncodedDF.drop(columns=['Music effects_Improve', 'Music effects_No effect', 'Music effects_Worsen'])\n",
-        "y = EncodedDF['Music effects_Improve']  # Binary classification target\n",
-        "\n",
-        "# Spliting the data\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-        "\n",
-        "# Scaling the features\n",
-        "scaler = StandardScaler()\n",
-        "X_train_scaled = scaler.fit_transform(X_train)\n",
-        "X_test_scaled = scaler.transform(X_test)\n",
-        "\n",
-        "# Using the already preprocessed EncodedDF\n",
-        "X = EncodedDF.drop(columns=['Music effects_Improve', 'Music effects_No effect', 'Music effects_Worsen'])\n",
-        "y = EncodedDF['Music effects_Improve']  # Binary classification for 'Improve' effect\n",
+        "y = EncodedDF['Music effects_Improve']\n",
         "\n",
         "# Spliting the data\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -645,7 +629,7 @@
         "rf_metrics = train_evaluate_model(rf_model, X_train_scaled, X_test_scaled, y_train, y_test, \"Random Forest\")\n",
         "gb_metrics = train_evaluate_model(gb_model, X_train_scaled, X_test_scaled, y_train, y_test, \"Gradient Boosting\")\n",
         "\n",
-        "# 2. KNN Model and Optimal k Selection\n",
+        "# KNN Model and Optimal k Selection\n",
         "k_values = range(1, 31)\n",
         "knn_metrics = {\n",
         "    'accuracy': [],\n",
@@ -702,9 +686,9 @@
           "height": 1000
         },
         "id": "BpwutWFDyxxP",
-        "outputId": "af85d966-b1fa-4511-9f1c-ce8b87a2d8b8"
+        "outputId": "889ed61c-7a3e-4464-f444-e4c6e5f4b17b"
       },
-      "execution_count": 23,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
